k8s/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jelly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:10.11.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8096
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /config
              name: config-vol
            - mountPath: /data/tvshows
              name: tvshows-vol
            - mountPath: /data/movies
              name: movies-vol
            - mountPath: /data/music
              name: music-vol
            # Mount the Intel render device
            - mountPath: /dev/dri
              name: dev-dri
          readinessProbe:
            httpGet:
              path: /web
              port: 8096
            initialDelaySeconds: 10
            periodSeconds: 3
      volumes:
        - name: config-vol
          persistentVolumeClaim:
            claimName: jellyfin-local-pvc
        - name: dev-dri
          hostPath:
            path: /dev/dri
        - name: tvshows-vol
          nfs:
            server: 192.168.2.254
            path: "/mnt/tank/media/Tv"
            readOnly: true
        - name: movies-vol
          nfs:
            server: 192.168.2.254
            path: "/mnt/tank/media/Movies"
            readOnly: true
        - name: music-vol
          nfs:
            server: 192.168.2.254
            path: "/mnt/tank/media/Music"
            readOnly: true
